--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,1 +1,48 @@
+name: CI/CD Pipeline
+
+# Run this workflow on push or pull request to the main branch
+on:
+  push:
+    branches:
+      - slave
+  pull_request:
+    branches:
+      - slave
+
+# Define the jobs in the workflow
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    # Check out the repository's code
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    # Set up Node.js environment
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    # Install dependencies
+    - name: Install dependencies
+      run: npm install
+
+    # Run tests
+    - name: Run tests
+      run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    # Deploy to a server or cloud (e.g., AWS, Heroku)
+    - name: Deploy to Production
+      run: echo "Deploying to production server..."  # Replace with actual deployment steps
 
